# rswarm

./: .env  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  ReadMe.md  output.txt
deploy/grafana/dashboards/: rswarm-overview.json
deploy/prometheus/: alerts.yaml
docs/: RAG_Plan.md  TestsNeeded.md  agent_context.db  openai-mock.md  phase1_task_decomposition.md  phase2_task_decomposition.md  prd_2.0.md  tasklist.md
docs/current_files/: tech_debt.md
docs/runbooks/: budget-exhausted.md  checkpoint-corruption.md  circuit-breaker-open.md
migrations/: 001_initial.sql
migrations/postgres/: 001_initial.sql
rswarm_examples/: Cargo.toml  README.md  prompt.txt
rswarm_examples/rust_doc_example/: Cargo.toml  prompt.txt
rswarm_examples/rust_doc_example/src/: lib.rs  main.rs
rswarm_examples/src/: browse_docs.rs  lib.rs  main.rs
src/: agent_comm.rs  agent_registry.rs  checkpoint.rs  circuit_breaker.rs  constants.rs  core.rs  distribution.rs  error.rs  escalation.rs  event.rs  guardrails.rs  lib.rs  memory.rs  observability.rs  persistence.rs  phase.rs  provider.rs  stream.rs  team.rs  tool.rs  types.rs  util.rs  validation.rs
src/memory/: qdrant.rs  sqlite_vss.rs  vector.rs
src/persistence/: postgres.rs  sqlite.rs
src/tests/: agent.rs  agent_serde.rs  builder.rs  initialization.rs  integration.rs  message.rs  mod.rs  parallel_tool_calls.rs  phase3.rs  runtime_enforcement.rs  stream.rs  swarm_run.rs  tool_args.rs
