[workspace]
members = [".", "rswarm_examples"]

[package]
name = "rswarm"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust implementation of the Swarm framework"
homepage = "https://github.com/socrates8300/rswarm"
repository = "https://github.com/socrates8300/rswarm"

[features]
default = []
## Enable Prometheus metrics scrape endpoint via metrics-exporter-prometheus.
metrics-export = ["metrics-exporter-prometheus"]
## Enable PostgreSQL-backed persistence.
postgres = ["tokio-postgres"]
## Enable OpenTelemetry trace/metrics export (opentelemetry + otlp exporter).
## Uncomment the optional deps below to activate.
otel = []
## Enable sqlite-vec embedded vector backend.
## Requires the sqlite_vec crate — uncomment the optional dep below.
sqlite-vec = []
## Enable Qdrant remote vector backend.
## Requires qdrant-client — uncomment the optional dep below.
qdrant = []

[dependencies]
anyhow = "1.0.89"
rusqlite = { version = "0.31", features = ["bundled"] }
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", optional = true }
tokio-postgres = { version = "0.7.13", optional = true, features = ["with-chrono-0_4", "with-serde_json-1"] }
# Uncomment to activate the `otel` feature:
# opentelemetry        = { version = "0.24", optional = true }
# opentelemetry_sdk    = { version = "0.24", features = ["rt-tokio"], optional = true }
# opentelemetry-otlp   = { version = "0.17", features = ["grpc-tonic"], optional = true }
# tracing-opentelemetry = { version = "0.25", optional = true }
# Uncomment to activate the `sqlite-vec` feature:
# sqlite_vec = { version = "0.1", optional = true }
# Uncomment to activate the `qdrant` feature:
# qdrant-client = { version = "1", optional = true }
async-stream = "0.3.6"
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.31"
futures-util = "0.3.31"
lazy_static = "1.5.0"
quick-xml = { version = "0.36.2", features = ["serde", "serialize"] }
regex = "1.11.0"
reqwest = { version = "0.12.9", features = [
    "json",
    "blocking",
    "stream",
    "rustls-tls",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.3"
tokio = { version = "1.40.0", features = ["full", "rt", "macros"] }
tracing = "0.1.40"
url = "2.5.3"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
actix-web = "4.9.0"
mcp_rs = "0.1.0"
openai-mock = "0.1.0"
openrouter_api = "0.1.2"
tokio = { version = "1.40.0", features = ["full", "test-util", "rt", "macros"] }
wiremock = "0.6"
