[workspace]
members = [".", "rswarm_examples"]

[package]
name = "rswarm"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A Rust implementation of the Swarm framework"
homepage = "https://github.com/socrates8300/rswarm"
repository = "https://github.com/socrates8300/rswarm"

[features]
default = []
## Enable Prometheus metrics scrape endpoint via metrics-exporter-prometheus.
metrics-export = ["metrics-exporter-prometheus"]
## Enable PostgreSQL-backed persistence.
postgres = ["dep:tokio-postgres"]
## Enable PostgreSQL with TLS (rustls + system root certs). Implies `postgres`.
postgres-tls = ["postgres", "dep:tokio-postgres-rustls", "dep:rustls", "dep:rustls-native-certs"]
## Enable OpenTelemetry trace export through OTLP.
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]
## Enable sqlite-vec embedded vector backend.
## The backend currently returns configuration errors until the adapter lands.
sqlite-vec = []
## Enable Qdrant remote vector backend.
## The backend currently returns configuration errors until the adapter lands.
qdrant = []

[dependencies]
anyhow = "1.0.89"
rusqlite = { version = "0.31", features = ["bundled"] }
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", optional = true }
tokio-postgres = { version = "0.7.13", optional = true, features = ["with-chrono-0_4", "with-serde_json-1"] }
tokio-postgres-rustls = { version = "0.12", optional = true }
rustls = { version = "0.23", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["trace", "grpc-tonic", "tls-roots"], optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["registry"], optional = true }
async-stream = "0.3.6"
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3.31"
futures-util = "0.3.31"
quick-xml = { version = "0.36.2", features = ["serde", "serialize"] }
regex = "1.11.0"
reqwest = { version = "0.12.9", features = [
    "json",
    "stream",
    "rustls-tls",
] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.3"
tokio = { version = "1.40.0", features = ["full", "rt", "macros"] }
tracing = "0.1.40"
url = "2.5.3"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[dev-dependencies]
actix-web = "4.9.0"
mcp_rs = "0.1.0"
openai-mock = "0.1.0"
openrouter_api = "0.1.2"
tokio = { version = "1.40.0", features = ["full", "test-util", "rt", "macros"] }
wiremock = "0.6"
