[package]
name = "rswarm_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
dotenv = { version = "0.15.0", features = ["clap", "cli"] }
futures = "0.3.31"
reqwest = { version = "0.11.24", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
quick-xml = "0.36.2"
headless_chrome = "1.0.15"
rswarm = "0.1.3"
html-escape = "0.2.13"
