[package]
name = "rswarm_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
dotenvy = "0.15"
futures = "0.3.31"
reqwest = { version = "0.12", features = ["json", "blocking", "stream", "rustls-tls"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
quick-xml = "0.36.2"
headless_chrome = "1.0.15"
rswarm = { path = ".." }
html-escape = "0.2.13"
scraper = "0.26.0"
log = "0.4.22"
env_logger = "0.11.5"
