[package]
name = "rust_doc_example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
dotenv = { version = "0.15.0", features = ["clap", "cli"] }
futures = "0.3.31"
reqwest = { version = "0.11.24", features = ["json", "blocking", "stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.41"
quick-xml = "0.36.2"
headless_chrome = "1.0.15"
rswarm = "0.1.3"
html-escape = "0.2.13"
scraper = "0.21.0"
log = "0.4.22"
env_logger = "0.11.5"
fmp_api = { git = "https://github.com/socrates8300/fmp_api.git" }
